<resources>
    <string name="app_name">Friends</string>
    <string name="settings">Settings</string>
    <string name="title_activity_add_new_friend">AddNewFriend</string>
    <string name="title_activity_friend_detail">FriendDetails</string>
    <string name="application_title">Friends</string>
    <string name="add_new_friend_toolbar_label">Add new friend</string>
    <string name="action_search">Search</string>


    <!--THE ADD NEW FRIEND ACTIVITY-->
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="phone_hint">Mobile</string>
    <string name="email_hint">Email</string>
    <string name="address_hint">Address</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone Number</string>

    <string name="cancel">Cancel</string>

    <string name="save_new_friend">Save</string>
    <string name="camera_image_white">Take Photo</string>
    <string name="add_new_friend_photo">Contact Photo</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>

    <!--EDIT CONTACT-->
    <string name="edit_contact">Edit Contact</string>
    <string name="save_upper">SAVE</string>
    <string name="delete_contact">Delete</string>
    <string name="share_contact">Share</string>
    <string name="title_activity_edit_friend">EditFriend</string>

    <string name="add_phone_number">Add phone number</string>
    <string name="add_email">Add email</string>
    <string name="title_activity_friend_location_details">Map</string>

    <!-- FRIEND DETAIL -->
    <string name="location_details_button">SEE LOCATION DETAILS</string>
    <string name="distance_from_friend">Distance from your location</string>
</resources>
